[gd_scene load_steps=15 format=3 uid="uid://bmvfg5yegqglk"]

[ext_resource type="Theme" uid="uid://dxtk6uqcp4kq4" path="res://mainTheme.tres" id="1_8p8kn"]
[ext_resource type="Script" uid="uid://bv685d44fchvj" path="res://Scenes/UI/card_visuals.gd" id="2_u13nj"]
[ext_resource type="Resource" uid="uid://c1t0gb07q11p6" path="res://characters/vanguard/cards/warrior_slash_attack.tres" id="3_v7cy3"]
[ext_resource type="Texture2D" uid="uid://c68ib3e18t7hx" path="res://art/1bit/orcoArt/Cards/Cardbase_01.png" id="4_6pjps"]
[ext_resource type="Texture2D" uid="uid://b3m4my3eil51h" path="res://art/1bit/rarity.png" id="4_764yn"]
[ext_resource type="Texture2D" uid="uid://bm0usp007p1y8" path="res://art/1bit/orcoArt/Cards/Cardbase_02.png" id="5_m4ekm"]
[ext_resource type="Texture2D" uid="uid://dvl4lhdo0e0xg" path="res://art/1bit/orcoArt/Vanguard_cards_art/Vanguard Block.png" id="7_hotxv"]
[ext_resource type="FontFile" uid="uid://bjuo1v8slm0rd" path="res://art/mago3.ttf" id="8_7jsmu"]
[ext_resource type="FontFile" uid="uid://cbh2m5v6jptja" path="res://art/m3x6.ttf" id="9_hotxv"]
[ext_resource type="FontFile" uid="uid://d3jmuy7ikvmgy" path="res://art/dnf-micro-3x4.ttf" id="10_hotxv"]

[sub_resource type="Animation" id="Animation_hywux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackPanel2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPanel2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DefensePanel2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DefensePanel2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cost:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.12, 4.1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardName:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, 5)]
}

[sub_resource type="Animation" id="Animation_8r5y1"]
resource_name = "flip_to_attack"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DefensePanel2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DefensePanel2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.250434),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPanel2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.250434),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackPanel2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.250434, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cost:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(61, 4.1), Vector2(6.12, 4.1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardName:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 5), Vector2(22, 4)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_hide_labels"
}, {
"args": [],
"method": &"_show_labels"
}]
}

[sub_resource type="Animation" id="Animation_hotxv"]
resource_name = "Flip_Attack"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackPanel2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackPanel2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.252723),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DefensePanel2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.252723),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DefensePanel2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cost:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5.12, 4.1), Vector2(61, 4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardName:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(23, 5), Vector2(5, 5)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_hide_labels"
}, {
"args": [],
"method": &"_show_labels"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8r5y1"]
_data = {
&"RESET": SubResource("Animation_hywux"),
&"flip_to_attack": SubResource("Animation_8r5y1"),
&"flip_to_defenze": SubResource("Animation_hotxv")
}

[node name="CardVisuals" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 82.0
offset_bottom = 110.0
theme = ExtResource("1_8p8kn")
script = ExtResource("2_u13nj")
card = ExtResource("3_v7cy3")

[node name="AttackPanel2" type="Sprite2D" parent="."]
position = Vector2(41, 55)
texture = ExtResource("4_6pjps")

[node name="DefensePanel2" type="Sprite2D" parent="."]
position = Vector2(41, 55)
scale = Vector2(1e-05, 1)
texture = ExtResource("5_m4ekm")

[node name="Cost" type="Label" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.05
anchor_right = 0.06
anchor_bottom = 0.05
offset_left = 0.2
offset_top = -1.4
offset_right = 16.2
offset_bottom = 15.6
theme_override_fonts/font = ExtResource("8_7jsmu")
theme_override_font_sizes/font_size = 16
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -28.0
offset_right = 74.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_hotxv")
stretch_mode = 5

[node name="Rarity" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -11.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 11.0
grow_horizontal = 0
texture = ExtResource("4_764yn")
expand_mode = 1
stretch_mode = 5

[node name="CardName" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 23.0
offset_top = 5.0
offset_right = 77.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("9_hotxv")
theme_override_font_sizes/font_size = 16
text = "Chop"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CardDescription" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 71.0
offset_right = 76.0
offset_bottom = 103.0
mouse_filter = 2
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("10_hotxv")
theme_override_font_sizes/normal_font_size = 4
bbcode_enabled = true
text = "Deal 3 damage to all enemies. Edge(4): Deal extra damage equal to 1/3 Edge"
scroll_active = false
autowrap_mode = 2
vertical_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8r5y1")
}
